# climate_classifier

./: .gitignore  main.py  manage.py  pyproject.toml  test_data.py
climate_classifier_config/: asgi.py  settings.py  urls.py  wsgi.py
location/: forms.py  models.py
