[tool.poetry]
name = "climate_classifier"
version = "0.1.0"
description = ""
authors = ["Jordan Haagenson <jdhaagenson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
django = "^3.1.3"
matplotlib = "^3.3.2"
pygame = "^2.0.0"
ajax = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
